Oops, actually add the index page to the file list

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -14,7 +14,7 @@ NARRS = \
 RATS = \
 	rationale
 
-FILES = ${NARRS} ${RATS}
+FILES = ${PAGES} ${NARRS} ${RATS}
 
 MDS   = $(addsuffix .markdown, ${FILES})
 HTMLS = $(addsuffix .html,     ${FILES})
